--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="output">
                 <div class="previous-operand"</div>
                 <div class="current-operand"></div>
+    
         </div>
         <button class="span-two">AC</button>
         <button>DEL</button>
@@ -23,7 +24,7 @@
         <button>1</button>
         <button>2</button>
         <button>3</button>
-        <button>*</button>
+        <button>x</button>
         <button>5</button>
         <button>6</button>
         <button>+</button>
