editing html buttons

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <body>
         <div class="calculator-grid">
             <div class="output">
-                <div class="previous-operand"</div>
+                <div class="previous-operand"></div>
                 <div class="current-operand"></div>
-    
+    <!--Creating the buttons-->
         </div>
         <button class="span-two">AC</button>
         <button>DEL</button>
