--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <body>
         <div class="calculator-grid">
             <div class="output">
-                <div class="previous-operand"></div>
-                <div class="current-operand"></div>
+                <div class="previous-operand">123 +</div><!--Dummy Text to play around-->
+                <div class="current-operand">456</div>
     <!--Creating the buttons-->
         </div>
         <button class="span-two">AC</button>
@@ -27,8 +27,8 @@
         <button>x</button>
         <button>5</button>
         <button>6</button>
-        <button>+</button>
         <button>7</button>
+        <button>+</button>
         <button>8</button>
         <button>9</button>
         <button>-</button>
