--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
     <body>
         <div class="calculator-grid">
             <div class="output">
-                <div class="previous-operand"></div><!--Dummy Text to play around-->
-                <div class="current-operand"></div>
+                <div data-previous-operand class="previous-operand"></div><!--Dummy Text to play around-->
+                <div data-current-operand class="current-operand"></div>
     <!--Creating the buttons-->
         </div>
-        <button class="span-two">AC</button>
-        <button>DEL</button>
-        <button>÷</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>x</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>+</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>-</button>
-        <button>.</button>
-        <button>0</button>
-        <button class="span-two">=</button>
+        <button data-all-clear class="span-two">AC</button>
+        <button data-delete>DEL</button>
+        <button data-operation>÷</button>
+        <button data-number>1</button>
+        <button data-number></button>>2</button>
+        <button data-number></button>>3</button>
+        <button data-operation>x</button>
+        <button data-number></button>>4</button>
+        <button data-number></button>>5</button>
+        <button data-number></button>>6</button>
+        <button data-operation>+</button>
+        <button data-number></button>>7</button>
+        <button data-number></button>>8</button>
+        <button data-number></button>>9</button>
+        <button data-operation>-</button>
+        <button data-number></button>.</button>
+        <button data-number></button>>0</button>
+        <button data-equals class="span-two">=</button>
     </body>
 </html>
 
