--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
         <button data-delete>DEL</button>
         <button data-operation>÷</button>
         <button data-number>1</button>
-        <button data-number></button>>2</button>
-        <button data-number></button>>3</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
         <button data-operation>x</button>
-        <button data-number></button>>4</button>
-        <button data-number></button>>5</button>
-        <button data-number></button>>6</button>
+        <button data-number>4</button>
+        <button data-number>5</button>
+        <button data-number>6</button>
         <button data-operation>+</button>
-        <button data-number></button>>7</button>
-        <button data-number></button>>8</button>
-        <button data-number></button>>9</button>
+        <button data-number>7</button>
+        <button data-number>8</button>
+        <button data-number>9</button>
         <button data-operation>-</button>
-        <button data-number></button>.</button>
-        <button data-number></button>>0</button>
+        <button data-number>.</button>
+        <button data-number>0</button>
         <button data-equals class="span-two">=</button>
     </body>
 </html>
